Style: finished styles for remove post confirmation page in style.css and removed border-radius from text inputs on get-help and edit-post pages in order to fix bug found on iphone using safari browser

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -266,6 +266,7 @@ body {
 }
 
 /* --------------------------Remove Post Confirmation Page */
+
 .confirmation-card h2 {
     color: white;
     text-align: center;
@@ -285,6 +286,51 @@ body {
     margin: 10px auto;
 }
 
+.post-name {
+    text-align: center;
+    color: #f5f5f5;
+    font-size: 18px;
+}
+
+.buttons {
+    text-align: center;
+}
+
+.confirmation-buttons {
+    display: inline-block;
+    padding: 7px 10px;
+    margin: 5px 10px 15px;
+    border-radius: 6px;
+    width: 150px;
+}
+
+.confirmation-buttons:hover {
+    text-decoration: none;
+    color: #f5f5f5;
+}
+
+.delete-button {
+    background: #d62436;
+    border: 2px solid #d62436;
+    color: #f5f5f5;
+}
+
+.delete-button:hover {
+    background: #c42736;
+    border: 2px solid #c42736;
+}
+
+.cancel-button {
+    background: #3c3c3c;
+    border: 2px solid grey;
+    color: #f5f5f5
+}
+
+.cancel-button:hover {
+    background: #363636;
+    border: 2px solid grey;
+}
+
 /* --------------------------Get Help Page */
 
 .form-section {
@@ -297,6 +343,7 @@ body {
     box-shadow: none;
     outline: none;
     border: none;
+    border-radius: none;
     height: 40px;
     border-bottom: 2px solid #f5f5f5;
     background: transparent;
@@ -421,6 +468,20 @@ body {
         font-size: 18px;
     }
 
+    /* --- Remove Post Confirmation Page */
+
+    .buttons {
+        text-align: center;
+        display: flex;
+        flex-direction: row-reverse;
+        flex-flow: column-reverse;
+        align-items: center;
+    }
+
+    .disclaimer {
+        font-size: 15px;
+    }
+
     /* --- Get Help Page */
 
     .title-card h2 {
@@ -460,6 +521,20 @@ body {
     /* --- Remove Post Confirmation Page */
     .confirmation-card h2 {
         font-size: 21px;
+    }
+
+    .disclaimer {
+        font-size: 13px;
+    }
+
+    .confirmation-buttons {
+        width: 135px;
+        font-size: 16px;
+        padding: 5px 10px;
+    }
+
+    .post-name {
+        font-size: 16px;
     }
 
     /* --- Get Help Page */
